--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keenan McGuckin's Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
-    <h1>Hi there! I'm Keenan. 🦉</h1>
+    <h1>Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
     <h2>A self-teaching frontend coder with the following passions:</h2>
     <h3>
         <ul>
