Attempt menu-toggle

--- a/index.html
+++ b/index.html
@@ -6,9 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keenan McGuckin's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/bird_logo.png" type="image/x-icon">
 </head>
 <body>
-    
+    <!-- ATTEMPT AT A MENU TOGGLE
+    <button id="menu-toggle">Toggle Menu</button>
+
+    <nav id="menu">
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section id="about">
+    </section>
+
+    <section id="portfolio">
+    </section>
+
+    <section id="contact">
+    </section>
+    -->
+
     <h1>Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
     <h2>A self-teaching frontend coder with the following passions:</h2>
     <h3>
