--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
     -->
 
     <h1>Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
-    <h2>A self-teaching frontend coder with the following passions:</h2>
+    <h2>A self-taught frontend coder with the following passions:</h2>
     <h3>
         <ul>
-            <li>Volunteering</li>
-            <li>Music</li>
-            <li>Paragliding</li>
-            <li>Writing</li>
-            <li>Birds</li>
-            <li>Videography / Photography / Editing</li>
+            <li><img src="images/egg-1.png" alt="bullet point image" />Volunteering</li>
+            <li><img src="images/egg-2.png" alt="bullet point image" />Music</li>
+            <li><img src="images/egg-1.png" alt="bullet point image" />Paragliding</li>
+            <li><img src="images/egg-2.png" alt="bullet point image" />Writing</li>
+            <li><img src="images/egg-1.png" alt="bullet point image" />Birds</li>
+            <li><img src="images/egg-2.png" alt="bullet point image" />Videography / Photography / Editing</li>
         </ul>
     </h3>
 
@@ -72,12 +72,12 @@
     <h2>In my free time, I devour new skills.  I am… </h2>
     <h3>
         <ul>
-            <li>Currently training to be a licensed massage therapist.</li>
-            <li>Paragliding.</li>
-            <li>Performing music around town.</li>
-            <li>Consuming fantasy, sci-fi, and horror novels and movies.</li>
-            <li>Stretching.</li>
-            <li>Planning my future wedding with someone I haven't met yet.</li>
+            <li><img src="images/egg-1.png" alt="bullet point image" />Currently training to be a licensed massage therapist.</li>
+            <li><img src="images/egg-2.png" alt="bullet point image" />Paragliding.</li>
+            <li><img src="images/egg-1.png" alt="bullet point image" />Performing music around town.</li>
+            <li><img src="images/egg-2.png" alt="bullet point image" />Consuming fantasy, sci-fi, and horror novels and movies.</li>
+            <li><img src="images/egg-1.png" alt="bullet point image" />Stretching.</li>
+            <li><img src="images/egg-2.png" alt="bullet point image" />Planning my future wedding with someone I haven't met yet.</li>
         </ul>
     </h3>
     <h2>I learn fast, work hard, dislike capitalism, and find that I mesh with teams quickly. </h2>
