--- a/index.html
+++ b/index.html
@@ -9,26 +9,12 @@
     <link rel="icon" href="images/bird_logo.png" type="image/x-icon">
 </head>
 <body>
-    <!-- ATTEMPT AT A MENU TOGGLE
-    <button id="menu-toggle">Toggle Menu</button>
+    <!-- ATTEMPT AT A MENU TOGGLE-->
+    <div class="menu">
+        <img src="images/resume.png" alt="Resume icon">
+        <img src="images/camera.png" alt="Photography icon">
+    </div>
 
-    <nav id="menu">
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-
-    <section id="about">
-    </section>
-
-    <section id="portfolio">
-    </section>
-
-    <section id="contact">
-    </section>
-    -->
 
     <h1>Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
     <h2>A self-taught frontend coder with the following passions:</h2>
@@ -65,25 +51,31 @@
 
     <img id="downArrow">\/</img>
 
-    <h1>More about me:</h1>
-    <h2>Thank you for getting this far!  I graduated from UC Santa Barbara in 2017 with a BA in Film and Media.  From there, I moved to Ethiopia and taught English to my 9th graders and learners of all ages from 2017-2019, while also becoming advanced in the Amharic language. Selam naw! Tenastilin!
-    </h2>
-    <h2>After that, I moved to LA to pursue a career in film.  I spent two suit-wearing years in the trenches of a talent agency, honing my skills as an expert communicator, multitasker, and client-facer.  Early in 2021, I moved back to Santa Barbara to work at Robert Zemeckis’s company, where I’ve been fortunate to work with an amazing team and meet my favorite celebs. (Hence, being Hanks’s fave barista). </h2>
-    <h2>In my free time, I devour new skills.  I am… </h2>
-    <h3>
-        <ul>
-            <li><img src="images/egg-1.png" alt="bullet point image" />Currently training to be a licensed massage therapist.</li>
-            <li><img src="images/egg-2.png" alt="bullet point image" />Paragliding.</li>
-            <li><img src="images/egg-1.png" alt="bullet point image" />Performing music around town.</li>
-            <li><img src="images/egg-2.png" alt="bullet point image" />Consuming fantasy, sci-fi, and horror novels and movies.</li>
-            <li><img src="images/egg-1.png" alt="bullet point image" />Stretching.</li>
-            <li><img src="images/egg-2.png" alt="bullet point image" />Planning my future wedding with someone I haven't met yet.</li>
-        </ul>
-    </h3>
-    <h2>I learn fast, work hard, dislike capitalism, and find that I mesh with teams quickly. </h2>
+<!--ABOUT ME-->
+    <section id="aboutMe" class="aboutMe">
+        <div class="wrapper">  
+            <h1>More about me:</h1>
+            <h2>Thank you for getting this far!  I graduated from UC Santa Barbara in 2017 with a BA in Film and Media.  From there, I moved to Ethiopia and taught English to my 9th graders and learners of all ages from 2017-2019, while also becoming advanced in the Amharic language. Selam naw! Tenastilin!
+            </h2>
+            <h2>After that, I moved to LA to pursue a career in film.  I spent two suit-wearing years in the trenches of a talent agency, honing my skills as an expert communicator, multitasker, and client-facer.  Early in 2021, I moved back to Santa Barbara to work at Robert Zemeckis’s company, where I’ve been fortunate to work with an amazing team and meet my favorite celebs. (Hence, being Hanks’s fave barista). </h2>
+            <h2>In my free time, I devour new skills.  I am… </h2>
+            <h3>
+                <ul>
+                    <li><img src="images/egg-1.png" alt="bullet point image" />Currently training to be a licensed massage therapist.</li>
+                    <li><img src="images/egg-2.png" alt="bullet point image" />Paragliding.</li>
+                    <li><img src="images/egg-1.png" alt="bullet point image" />Performing music around town.</li>
+                    <li><img src="images/egg-2.png" alt="bullet point image" />Consuming fantasy, sci-fi, and horror novels and movies.</li>
+                    <li><img src="images/egg-1.png" alt="bullet point image" />Stretching.</li>
+                    <li><img src="images/egg-2.png" alt="bullet point image" />Planning my future wedding with someone I haven't met yet.</li>
+                </ul>
+            </h3>
+            <h2>I learn fast, work hard, dislike capitalism, and find that I mesh with teams quickly. </h2>
+        </div>  
+    </section>
 
     <img id="downArrow">\/</img>
 
+<!--CONTACT ME-->
     <div #contactMe>
         <h1>Let's connect!</h1>
         <h2>Here's my media, please hit me up:</h2><br>
