--- a/index.html
+++ b/index.html
@@ -11,28 +11,31 @@
 <body>
     <!-- ATTEMPT AT A MENU TOGGLE-->
     <div class="menu">
-        <img src="images/resume.png" alt="Resume icon">
-        <img src="images/camera.png" alt="Photography icon">
+        <img id="resume" src="images/resume.png" alt="Resume icon"><br>
+        <img id="camera" src="images/camera.png" alt="Photography icon">
     </div>
+    <div class="headerBg wrapper">
 
+        <header>
+            <h1>Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
+            <p>A self-taught frontend coder with the following passions:</p>
+            <h3>
+                <ul>
+                    <li><img src="images/egg-1.png" alt="bullet point image" />Volunteering</li>
+                    <li><img src="images/egg-2.png" alt="bullet point image" />Music</li>
+                    <li><img src="images/egg-1.png" alt="bullet point image" />Paragliding</li>
+                    <li><img src="images/egg-2.png" alt="bullet point image" />Writing</li>
+                    <li><img src="images/egg-1.png" alt="bullet point image" />Birds</li>
+                    <li><img src="images/egg-2.png" alt="bullet point image" />Videography / Photography / Editing</li>
+                </ul>
+            </h3>
 
-    <h1>Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
-    <h2>A self-taught frontend coder with the following passions:</h2>
-    <h3>
-        <ul>
-            <li><img src="images/egg-1.png" alt="bullet point image" />Volunteering</li>
-            <li><img src="images/egg-2.png" alt="bullet point image" />Music</li>
-            <li><img src="images/egg-1.png" alt="bullet point image" />Paragliding</li>
-            <li><img src="images/egg-2.png" alt="bullet point image" />Writing</li>
-            <li><img src="images/egg-1.png" alt="bullet point image" />Birds</li>
-            <li><img src="images/egg-2.png" alt="bullet point image" />Videography / Photography / Editing</li>
-        </ul>
-    </h3>
+            <div #avatar></div>
 
-    <div #avatar></div>
-
-    <h2>I currently work at Robert Zemeckis’s production company, 
-        and have the honor of being Tom Hanks’s favorite barista.</h2>
+            <p>I currently work at Robert Zemeckis’s production company, 
+                and have the honor of being Tom Hanks’s favorite barista.</p>
+        </header>        
+    </div>
 
     <img id="downArrow">\/</img>
 
@@ -42,7 +45,7 @@
             <a href="https://www.theodinproject.com/paths">The Odin Project</a>, 
             here are my recent projects. </h2>
         
-        <div >
+        <div class="row">
             <img #etch />
             <img #calc />
             <img #game />
@@ -55,10 +58,10 @@
     <section id="aboutMe" class="aboutMe">
         <div class="wrapper">  
             <h1>More about me:</h1>
-            <h2>Thank you for getting this far!  I graduated from UC Santa Barbara in 2017 with a BA in Film and Media.  From there, I moved to Ethiopia and taught English to my 9th graders and learners of all ages from 2017-2019, while also becoming advanced in the Amharic language. Selam naw! Tenastilin!
-            </h2>
-            <h2>After that, I moved to LA to pursue a career in film.  I spent two suit-wearing years in the trenches of a talent agency, honing my skills as an expert communicator, multitasker, and client-facer.  Early in 2021, I moved back to Santa Barbara to work at Robert Zemeckis’s company, where I’ve been fortunate to work with an amazing team and meet my favorite celebs. (Hence, being Hanks’s fave barista). </h2>
-            <h2>In my free time, I devour new skills.  I am… </h2>
+            <p>Thank you for getting this far!  I graduated from UC Santa Barbara in 2017 with a BA in Film and Media.  From there, I moved to Ethiopia and taught English to my 9th graders and learners of all ages from 2017-2019, while also becoming advanced in the Amharic language. Selam naw! Tenastilin!
+            </p>
+            <p>After that, I moved to LA to pursue a career in film.  I spent two suit-wearing years in the trenches of a talent agency, honing my skills as an expert communicator, multitasker, and client-facer.  Early in 2021, I moved back to Santa Barbara to work at Robert Zemeckis’s company, where I’ve been fortunate to work with an amazing team and meet my favorite celebs. (Hence, being Hanks’s fave barista). </p>
+            <p>In my free time, I devour new skills.  I am… </p>
             <h3>
                 <ul>
                     <li><img src="images/egg-1.png" alt="bullet point image" />Currently training to be a licensed massage therapist.</li>
@@ -69,7 +72,7 @@
                     <li><img src="images/egg-2.png" alt="bullet point image" />Planning my future wedding with someone I haven't met yet.</li>
                 </ul>
             </h3>
-            <h2>I learn fast, work hard, dislike capitalism, and find that I mesh with teams quickly. </h2>
+            <p>I learn fast, work hard, dislike capitalism, and find that I mesh with teams quickly. </h2>
         </div>  
     </section>
 
@@ -78,7 +81,7 @@
 <!--CONTACT ME-->
     <div #contactMe>
         <h1>Let's connect!</h1>
-        <h2>Here's my media, please hit me up:</h2><br>
+        <p>Here's my media, please hit me up:</p><br>
         <img #linkedIn />
         <img #gitHub />
         <img #insta />
