--- a/index.html
+++ b/index.html
@@ -17,23 +17,24 @@
     <div class="headerBg wrapper">
 
         <header>
-            <h1>Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
-            <p>A self-taught frontend coder with the following passions:</p>
-            <h3>
-                <ul>
-                    <li><img src="images/egg-1.png" alt="bullet point image" />Volunteering</li>
-                    <li><img src="images/egg-2.png" alt="bullet point image" />Music</li>
-                    <li><img src="images/egg-1.png" alt="bullet point image" />Paragliding</li>
-                    <li><img src="images/egg-2.png" alt="bullet point image" />Writing</li>
-                    <li><img src="images/egg-1.png" alt="bullet point image" />Birds</li>
-                    <li><img src="images/egg-2.png" alt="bullet point image" />Videography / Photography / Editing</li>
-                </ul>
-            </h3>
+            <div class="headerText">
+                <h1>Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
+                <p>A self-taught frontend coder with the following passions:</p>
+                <h3>
+                    <ul>
+                        <li><img src="images/egg-1.png" alt="bullet point image" />Volunteering</li>
+                        <li><img src="images/egg-2.png" alt="bullet point image" />Music</li>
+                        <li><img src="images/egg-1.png" alt="bullet point image" />Paragliding</li>
+                        <li><img src="images/egg-2.png" alt="bullet point image" />Writing</li>
+                        <li><img src="images/egg-1.png" alt="bullet point image" />Birds</li>
+                        <li><img src="images/egg-2.png" alt="bullet point image" />Videography / Photography / Editing</li>
+                    </ul>
+                </h3>
+                <p>I currently work at Robert Zemeckis’s production company, 
+                    and have the honor of being Tom Hanks’s favorite barista.</p>
+            </div>
+            <div #avatar><img class="tempAvatar" src="images/paraglide.jpeg" /></div>
 
-            <div #avatar></div>
-
-            <p>I currently work at Robert Zemeckis’s production company, 
-                and have the honor of being Tom Hanks’s favorite barista.</p>
         </header>        
     </div>
 
