Progress on header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="icon" href="images/bird_logo.png" type="image/x-icon">
 </head>
 <body>
-    <!-- ATTEMPT AT A MENU TOGGLE-->
     <div class="menu">
         <img id="resume" src="images/resume.png" alt="Resume icon"><br>
         <img id="camera" src="images/camera.png" alt="Photography icon">
@@ -30,10 +29,10 @@
                         <li><img src="images/egg-2.png" alt="bullet point image" />Videography / Photography / Editing</li>
                     </ul>
                 </h3>
-                <p>I currently work at Robert Zemeckis’s production company, 
+                <p>I currently work at Robert Zemeckis’s production company, <br>
                     and have the honor of being Tom Hanks’s favorite barista.</p>
             </div>
-            <div #avatar><img class="tempAvatar" src="images/paraglide.jpeg" /></div>
+            <div id="avatar"><img class="tempAvatar" src="images/paraglide.jpeg" /></div>
 
         </header>        
     </div>
