New Header text, new menu icons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <div class="headerText">
                 <h1>Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
-                <p>A self-taught frontend coder with the following passions:</p>
+                <p>A self-taught developer since January 2023 with the following passions:</p>
                 <h3>
                     <ul>
                         <li><img src="images/egg-1.png" alt="bullet point image" />Volunteering</li>
@@ -29,8 +29,10 @@
                         <li><img src="images/egg-2.png" alt="bullet point image" />Videography / Photography / Editing</li>
                     </ul>
                 </h3>
-                <p>I currently work at Robert Zemeckis’s production company, <br>
-                    and have the honor of being Tom Hanks’s favorite barista.</p>
+                <p>My coding journey began with dabbling in HTML & CSS in October 2022, <br>
+                    curious but wondering if I'd hate it... <br><br>
+                After a break from nid-November to mid-January, I decided to dive in,<br>
+                and have been loving it ever since.  I have some <strong>big</strong> goals!</p>
             </div>
             <div id="avatar"><img class="tempAvatar" src="images/paraglide.jpeg" /></div>
 
