More header styling

--- a/index.html
+++ b/index.html
@@ -18,19 +18,18 @@
         <header>
             <div class="headerText">
                 <h1>Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
-                <p>A self-taught developer since January 2023 with the following passions:</p>
+                <p>A self-taught developer studying daily since January 2023 <br>with the following passions:</p>
                 <h3>
-                    <ul>
-                        <li><img src="images/egg-1.png" alt="bullet point image" />Volunteering</li>
-                        <li><img src="images/egg-2.png" alt="bullet point image" />Music</li>
-                        <li><img src="images/egg-1.png" alt="bullet point image" />Paragliding</li>
-                        <li><img src="images/egg-2.png" alt="bullet point image" />Writing</li>
-                        <li><img src="images/egg-1.png" alt="bullet point image" />Birds</li>
-                        <li><img src="images/egg-2.png" alt="bullet point image" />Videography / Photography / Editing</li>
+                    <ul class="eggs-list">
+                        <li><img src="images/egg-1.png" alt="egg image" />Volunteering</li>
+                        <li><img src="images/egg-2.png" alt="egg image" />Music</li>
+                        <li><img src="images/egg-1.png" alt="egg image" />Paragliding</li>
+                        <li><img src="images/egg-2.png" alt="egg image" />Writing</li>
+                        <li><img src="images/egg-1.png" alt="egg image" />Birds</li>
                     </ul>
                 </h3>
-                <p>My coding journey began with dabbling in HTML & CSS in October 2022, <br>
-                    curious but wondering if I'd hate it... <br><br>
+                <p>I began dabbling in HTML, CSS, and Python in October 2022, <br> wondering if
+                    I'd even like it... <br><br>
                 After a break from nid-November to mid-January, I decided to dive in,<br>
                 and have been loving it ever since.  I have some <strong>big</strong> goals!</p>
             </div>
@@ -65,7 +64,7 @@
             <p>After that, I moved to LA to pursue a career in film.  I spent two suit-wearing years in the trenches of a talent agency, honing my skills as an expert communicator, multitasker, and client-facer.  Early in 2021, I moved back to Santa Barbara to work at Robert Zemeckis’s company, where I’ve been fortunate to work with an amazing team and meet my favorite celebs. (Hence, being Hanks’s fave barista). </p>
             <p>In my free time, I devour new skills.  I am… </p>
             <h3>
-                <ul>
+                <ul class="eggs-list2">
                     <li><img src="images/egg-1.png" alt="bullet point image" />Currently training to be a licensed massage therapist.</li>
                     <li><img src="images/egg-2.png" alt="bullet point image" />Paragliding.</li>
                     <li><img src="images/egg-1.png" alt="bullet point image" />Performing music around town.</li>
