Adjust menu and avatar fades, add JS for av fade

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="icon" href="images/bird_logo.png" type="image/x-icon">
 </head>
 <body>
+    <script defer src="main.js"></script>
+    
     <div class="menu">
         <img id="resume" src="images/resume.png" alt="Resume icon"><br>
         <img id="camera" src="images/camera.png" alt="Photography icon">
@@ -30,7 +32,7 @@
                 </h3>
                 <p>I began dabbling in HTML, CSS, and Python in October 2022, <br> wondering if
                     I'd even like it... <br><br>
-                After a break from nid-November to mid-January, I decided to dive in,<br>
+                After a break from November to January, I decided to dive in,<br>
                 and have been loving it ever since.  I have some <strong>big</strong> goals!</p>
             </div>
             <div id="avatar"><img class="tempAvatar" src="images/paraglide.jpeg" /></div>
