Animate arrows, add project images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <script defer src="main.js"></script>
-    
+
     <div class="menu">
         <img id="resume" src="images/resume.png" alt="Resume icon"><br>
         <img id="camera" src="images/camera.png" alt="Photography icon">
@@ -40,7 +40,7 @@
         </header>        
     </div>
 
-    <img id="downArrow">\/</img>
+    <img id="arrow" src="images/arrow.png"></img>
 
 <!--MY PROJECTS-->
     <div #projects>
@@ -48,14 +48,14 @@
             <a href="https://www.theodinproject.com/paths">The Odin Project</a>, 
             here are my recent projects. </h2>
         
-        <div class="row">
-            <img #etch />
-            <img #calc />
-            <img #game />
+        <div class="row projects">
+            <img #etch class="projImg" src="images/etch.png" />
+            <img #calc class="projImg" src="images/calculator.png" />
+            <img #game class="projImg" src="images/rps.png" />
         </div>
     </div>
 
-    <img id="downArrow">\/</img>
+    <img id="arrow" src="images/arrow.png"></img>
 
 <!--ABOUT ME-->
     <section id="aboutMe" class="aboutMe">
