Remove avatar fadeout, too tedious

--- a/index.html
+++ b/index.html
@@ -43,16 +43,18 @@
     <img id="arrow" src="images/arrow.png"></img>
 
 <!--MY PROJECTS-->
-    <div #projects>
-        <h2>Learning to code from YouTube videos and dedication to 
-            <a href="https://www.theodinproject.com/paths">The Odin Project</a>, 
-            here are my recent projects. </h2>
-        
-        <div class="row projects">
-            <img #etch class="projImg" src="images/etch.png" />
-            <img #calc class="projImg" src="images/calculator.png" />
-            <img #game class="projImg" src="images/rps.png" />
-        </div>
+    <div #projects class="projectsBg wrapper">
+        <section>
+            <h2>Learning to code from YouTube videos and dedication to 
+                <a href="https://www.theodinproject.com/paths">The Odin Project</a>, 
+                here are my recent projects. </h2>
+            
+            <div class="row projects">
+                <img #etch class="projImg" src="images/etch.png" />
+                <img #calc class="projImg" src="images/calculator.png" />
+                <img #game class="projImg" src="images/rps.png" />
+            </div>
+        </section>
     </div>
 
     <img id="arrow" src="images/arrow.png"></img>
