Cause avatar hover image & descrip change

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <p>A self-taught developer studying daily since January 2023 <br>with the following passions:</p>
                 <h3>
                     <ul class="eggs-list">
-                        <li><img src="images/egg-1.png" alt="egg image" />Volunteering</li>
-                        <li><img src="images/egg-2.png" alt="egg image" />Music</li>
-                        <li><img src="images/egg-1.png" alt="egg image" />Paragliding</li>
-                        <li><img src="images/egg-2.png" alt="egg image" />Writing</li>
-                        <li><img src="images/egg-1.png" alt="egg image" />Birds</li>
+                        <li class="passions" data-avatar="images/education.png"><img src="images/egg-1.png" alt="egg image" />Volunteering</li>
+                        <li class="passions" data-avatar="images/music.jpg"><img src="images/egg-2.png" alt="egg image" />Writing Music & Stories</li>
+                        <li class="passions" data-avatar="images/paraglide.jpeg"><img src="images/egg-1.png" alt="egg image" />Paragliding</li>
+                        <li class="passions" data-avatar="images/hummingbird.jpg"><img src="images/egg-2.png" alt="egg image" />Birds</li>
+                        <li class="passions" data-avatar="images/photography.jpg"><img src="images/egg-1.png" alt="egg image" />Photography</li>
                     </ul>
                 </h3>
                 <p>I began dabbling in HTML, CSS, and Python in October 2022, <br> wondering if
@@ -35,7 +35,10 @@
                 After a break from November to January, I decided to dive in,<br>
                 and have been loving it ever since.  I have some <strong>big</strong> goals!</p>
             </div>
-            <div id="avatar"><img class="tempAvatar" src="images/paraglide.jpeg" /></div>
+            <div id="avatar">
+                <img class="tempAvatar" src="images/paraglide.jpeg" />
+                <h6 class="avatarText"></h6>
+            </div>
 
         </header>        
     </div>
