Add projects animation and links

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </h3>
                 <p>I began dabbling in HTML, CSS, and Python in October 2022, <br> wondering if
                     I'd even like it... <br><br>
-                After a break from November to January, I decided to dive in,<br>
+                And after a break from November to January I dove back in,<br>
                 and have been loving it ever since.  I have some <strong>big</strong> goals!</p>
             </div>
             <div id="avatar">
@@ -46,16 +46,22 @@
     <img id="arrow" src="images/arrow.png"></img>
 
 <!--MY PROJECTS-->
-    <div #projects class="projectsBg wrapper">
-        <section>
+    <div id="projects" class="projectsBg wrapper">
+        <section class="projectSect">
             <h2>Learning to code from YouTube videos and dedication to 
                 <a href="https://www.theodinproject.com/paths">The Odin Project</a>, 
                 here are my recent projects. </h2>
             
             <div class="row projects">
-                <img #etch class="projImg" src="images/etch.png" />
-                <img #calc class="projImg" src="images/calculator.png" />
-                <img #game class="projImg" src="images/rps.png" />
+                <a href="https://keenymcg.github.io/Odin_Etch_a_sketch/">
+                    <img id="etch" class="projImg" src="images/etch.png" />
+                </a>
+                <a href="https://keenymcg.github.io/Odin_Calculator/">
+                    <img id="calc" class="projImg" src="images/calculator.png" />
+                </a>
+                <a href="https://keenymcg.github.io/Odin-Rock-Paper-Scissor-JS/">
+                    <img id="game" class="projImg" src="images/rps.png" />
+                </a>
             </div>
         </section>
     </div>
