--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 <!--MY PROJECTS-->
     <div id="projects" class="projectsBg wrapper">
         <section class="projectSect">
-            <h2>Learning to code from YouTube videos and dedication to 
+            <h1 class="specialH1">Learning to code from YouTube videos and dedication to 
                 <a href="https://www.theodinproject.com/paths">The Odin Project</a>, 
-                here are my recent projects. </h2>
+                here are my recent projects. </h1>
             
             <div class="row projects">
                 <a href="https://keenymcg.github.io/Odin_Etch_a_sketch/">
@@ -66,41 +66,55 @@
         </section>
     </div>
 
-    <img id="arrow" src="images/arrow.png"></img>
+    <img id="arrow2" class="lastArrow" src="images/arrow.png"></img>
 
 <!--ABOUT ME-->
     <section id="aboutMe" class="aboutMe">
         <div class="wrapper">  
-            <h1>More about me:</h1>
-            <p>Thank you for getting this far!  I graduated from UC Santa Barbara in 2017 with a BA in Film and Media.  From there, I moved to Ethiopia and taught English to my 9th graders and learners of all ages from 2017-2019, while also becoming advanced in the Amharic language. Selam naw! Tenastilin!
-            </p>
-            <p>After that, I moved to LA to pursue a career in film.  I spent two suit-wearing years in the trenches of a talent agency, honing my skills as an expert communicator, multitasker, and client-facer.  Early in 2021, I moved back to Santa Barbara to work at Robert Zemeckis’s company, where I’ve been fortunate to work with an amazing team and meet my favorite celebs. (Hence, being Hanks’s fave barista). </p>
-            <p>In my free time, I devour new skills.  I am… </p>
-            <h3>
-                <ul class="eggs-list2">
-                    <li><img src="images/egg-1.png" alt="bullet point image" />Currently training to be a licensed massage therapist.</li>
-                    <li><img src="images/egg-2.png" alt="bullet point image" />Paragliding.</li>
-                    <li><img src="images/egg-1.png" alt="bullet point image" />Performing music around town.</li>
-                    <li><img src="images/egg-2.png" alt="bullet point image" />Consuming fantasy, sci-fi, and horror novels and movies.</li>
-                    <li><img src="images/egg-1.png" alt="bullet point image" />Stretching.</li>
-                    <li><img src="images/egg-2.png" alt="bullet point image" />Planning my future wedding with someone I haven't met yet.</li>
-                </ul>
+            <h1 class="aboutHeading">More about me:</h1>
+            
+            <div class="aboutParaWrap">
+                <p class="aboutMeP">Thank you for getting this far!  I graduated from UC Santa Barbara in 2017 with a BA in Film and Media.  From there, I moved to Ethiopia and taught English to my 9th graders and learners of all ages from 2017-2019, while also becoming advanced in the Amharic language. Selam naw! Tenastilin!
+                </p>
+                <p class="aboutMeP">After that, I moved to LA to pursue a career in film.  I spent two suit-wearing years in the trenches of a talent agency, honing my skills as an expert communicator, multitasker, and client-facer.  Early in 2021, I moved back to Santa Barbara to work at Robert Zemeckis’s company, where I’ve been fortunate to work with an amazing team and meet my favorite celebs. (Hence, being Hanks’s fave barista). </p>
+                <p class="aboutMeP">In my free time, I devour new skills.  I am… </p>
+                <h3>
+                    <ul class="eggs-list2">
+                        <li><img src="images/egg-1.png" alt="bullet point image" />Currently training to be a licensed massage therapist.</li>
+                        <li><img src="images/egg-2.png" alt="bullet point image" />Paragliding.</li>
+                        <li><img src="images/egg-1.png" alt="bullet point image" />Performing music around town.</li>
+                        <li><img src="images/egg-2.png" alt="bullet point image" />Consuming fantasy, sci-fi, and horror novels and movies.</li>
+                        <li><img src="images/egg-1.png" alt="bullet point image" />Stretching.</li>
+                        <li><img src="images/egg-2.png" alt="bullet point image" />Planning my future wedding with someone I haven't met yet.</li>
+                    </ul>
+                </h3>
+                <p>I learn fast, work hard, dislike capitalism, and find that I mesh with teams quickly. </h2>
+            </div>
             </h3>
-            <p>I learn fast, work hard, dislike capitalism, and find that I mesh with teams quickly. </h2>
         </div>  
     </section>
 
-    <img id="downArrow">\/</img>
+    <img id="arrow2" class="lastArrow" src="images/arrow.png"></img>
 
 <!--CONTACT ME-->
-    <div #contactMe>
-        <h1>Let's connect!</h1>
-        <p>Here's my media, please hit me up:</p><br>
-        <img #linkedIn />
-        <img #gitHub />
-        <img #insta />
+    <div id="contactMe">
+        <h1 class="contactMe">Let's connect!</h1>
+        <div class="socialsWrapper">
+            <p>Here's my media, say <em>"hi!"</em> anytime:</p><br>
+            <div class="socials">
+                <a href="https://www.linkedin.com/in/keenanmcguckin/">
+                    <img id="linkedIn" class="socialsImg" src="images/linked.png"/>
+                </a> 
+                <a href="https://github.com/keenymcg">
+                    <img id="gitHub" class="socialsImg" src="images/github.png"/>
+                </a>
+                <a href="https://www.instagram.com/keenoman_photography/">
+                    <img id="insta" class="socialsImg" src="images/insta.png"/>
+                </a>
+            </div>
+        </div>
     </div>
 
-    <footer>Developed and designed with love<img #heart /> Keenan McGuckin</footer>
+    <footer>Developed and designed with love <img id="heart" src="images/heart.png" /> Keenan McGuckin</footer>
 </body>
 </html>
