--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <script defer src="main.js"></script>
 
     <div class="menu">
-        <img id="resume" src="images/resume.png" alt="Resume icon"><br>
-        <img id="camera" src="images/camera.png" alt="Photography icon">
+        <img id="resume" class="menuImg" src="images/resume.png" alt="Resume icon"><br>
+        <img id="camera" class="menuImg" src="images/camera.png" alt="Photography icon">
     </div>
     <div class="headerBg wrapper">
 
@@ -24,15 +24,14 @@
                 <h3>
                     <ul class="eggs-list">
                         <li class="passions" data-avatar="images/education.png"><img src="images/egg-1.png" alt="egg image" />Volunteering</li>
-                        <li class="passions" data-avatar="images/music.jpg"><img src="images/egg-2.png" alt="egg image" />Writing Music & Stories</li>
+                        <li class="passions" data-avatar="images/music.jpg"><img src="images/egg-2.png" alt="egg image" />Professional Singing & Piano</li>
                         <li class="passions" data-avatar="images/paraglide.jpeg"><img src="images/egg-1.png" alt="egg image" />Paragliding</li>
                         <li class="passions" data-avatar="images/hummingbird.jpg"><img src="images/egg-2.png" alt="egg image" />Birds</li>
                         <li class="passions" data-avatar="images/photography.jpg"><img src="images/egg-1.png" alt="egg image" />Photography</li>
                     </ul>
                 </h3>
-                <p>I began dabbling in HTML, CSS, and Python in October 2022, <br> wondering if
-                    I'd even like it... <br><br>
-                And after a break from November to January I dove back in,<br>
+                <p>I began dabbling in HTML, CSS, and Python in October 2022, <br> but life got in the way for a bit... <br><br>
+                After a break from November to January I dove back in,<br>
                 and have been loving it ever since.  I have some <strong>big</strong> goals!</p>
             </div>
             <div id="avatar">
@@ -48,10 +47,11 @@
 <!--MY PROJECTS-->
     <div id="projects" class="projectsBg wrapper">
         <section class="projectSect">
-            <h1 class="specialH1">Learning to code from YouTube videos and dedication to 
-                <a href="https://www.theodinproject.com/paths">The Odin Project</a>, 
-                here are my recent projects. </h1>
-            
+            <div class="specialH1Wrapper">
+                <h1 class="specialH1">Learning to code from YouTube videos and dedication to 
+                    <a href="https://www.theodinproject.com/paths">The Odin Project</a>, 
+                    here are my recent projects. </h1>
+            </div>
             <div class="row projects">
                 <a href="https://keenymcg.github.io/Odin_Etch_a_sketch/">
                     <img id="etch" class="projImg" src="images/etch.png" />
@@ -70,51 +70,42 @@
 
 <!--ABOUT ME-->
     <section id="aboutMe" class="aboutMe">
-        <div class="wrapper">  
+        <div class="aboutWrapper">  
             <h1 class="aboutHeading">More about me:</h1>
             
             <div class="aboutParaWrap">
-                <p class="aboutMeP">Thank you for getting this far!  I graduated from UC Santa Barbara in 2017 with a BA in Film and Media.  From there, I moved to Ethiopia and taught English to my 9th graders and learners of all ages from 2017-2019, while also becoming advanced in the Amharic language. Selam naw! Tenastilin!
+                <p class="aboutMeP">Graduated from UC Santa Barbara in 2017, B.A. in Film and Media.<br><br>
+                    From there, I moved to Ethiopia and taught English to 9th graders and learners of all ages until 2019, 
+                    while also becoming advanced in the Amharic language. ሰላም ናው, ቴናስቲሊን!
                 </p>
-                <p class="aboutMeP">After that, I moved to LA to pursue a career in film.  I spent two suit-wearing years in the trenches of a talent agency, honing my skills as an expert communicator, multitasker, and client-facer.  Early in 2021, I moved back to Santa Barbara to work at Robert Zemeckis’s company, where I’ve been fortunate to work with an amazing team and meet my favorite celebs. (Hence, being Hanks’s fave barista). </p>
-                <p class="aboutMeP">In my free time, I devour new skills.  I am… </p>
-                <h3>
-                    <ul class="eggs-list2">
-                        <li><img src="images/egg-1.png" alt="bullet point image" />Currently training to be a licensed massage therapist.</li>
-                        <li><img src="images/egg-2.png" alt="bullet point image" />Paragliding.</li>
-                        <li><img src="images/egg-1.png" alt="bullet point image" />Performing music around town.</li>
-                        <li><img src="images/egg-2.png" alt="bullet point image" />Consuming fantasy, sci-fi, and horror novels and movies.</li>
-                        <li><img src="images/egg-1.png" alt="bullet point image" />Stretching.</li>
-                        <li><img src="images/egg-2.png" alt="bullet point image" />Planning my future wedding with someone I haven't met yet.</li>
-                    </ul>
-                </h3>
-                <p>I learn fast, work hard, dislike capitalism, and find that I mesh with teams quickly. </h2>
+                <p class="aboutMeP">After that, I moved to LA to pursue a career in film.  
+                    I spent two suit-wearing years in the trenches of a talent agency, 
+                    honing my skills as an expert communicator, multitasker, and client-facer. <br><br>
+                    Early in 2021, I moved back to Santa Barbara to work at Robert Zemeckis’s company, 
+                    where I’ve been fortunate to work with an amazing team, and meet my favorite celebs. 
+                    <br>(<i>My claim to fame is being Tom Hanks’s favorite barista</i>). </p>
+                <p class="aboutMeP">In my free time, I devour new skills.  <strong>I learn fast, work hard, dislike capitalism, and find that I mesh with teams quickly.</strong> </h2>
             </div>
-            </h3>
         </div>  
     </section>
 
-    <img id="arrow2" class="lastArrow" src="images/arrow.png"></img>
+    <img id="arrow2" class="lastArrow" src="images/exclam.png"></img>
 
 <!--CONTACT ME-->
-    <div id="contactMe">
-        <h1 class="contactMe">Let's connect!</h1>
-        <div class="socialsWrapper">
-            <p>Here's my media, say <em>"hi!"</em> anytime:</p><br>
-            <div class="socials">
-                <a href="https://www.linkedin.com/in/keenanmcguckin/">
-                    <img id="linkedIn" class="socialsImg" src="images/linked.png"/>
-                </a> 
-                <a href="https://github.com/keenymcg">
-                    <img id="gitHub" class="socialsImg" src="images/github.png"/>
-                </a>
-                <a href="https://www.instagram.com/keenoman_photography/">
-                    <img id="insta" class="socialsImg" src="images/insta.png"/>
-                </a>
+    <section id="contactMe" class="aboutMe">
+        <div class="aboutWrapper">
+            <h1 class="aboutHeading poop">Let's connect!</h1>
+            <div class="socialsWrapper">
+                <p>Here's my media, say <em>"hi!"</em> anytime:</p><br>
+                <div class="socials">
+                        <img id="linkedIn" class="socialsImg" src="images/linked.png"/>
+                        <img id="gitHub" class="socialsImg" src="images/github.png"/>
+                        <img id="insta" class="socialsImg" src="images/insta.png"/>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <footer>Developed and designed with love <img id="heart" src="images/heart.png" /> Keenan McGuckin</footer>
+    <footer>Developed and designed with JS, HTML, & CSS <img id="heart" src="images/heart.png" /> Keenan McGuckin</footer>
 </body>
 </html>
