--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
             <div class="headerText">
-                <h1>Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
+                <h1 class="woop">Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
                 <p>A self-taught developer studying daily since January 2023 <br>with the following passions:</p>
                 <h3>
                     <ul class="eggs-list">
@@ -53,15 +53,9 @@
                     here are my recent projects. </h1>
             </div>
             <div class="row projects">
-                <a href="https://keenymcg.github.io/Odin_Etch_a_sketch/">
-                    <img id="etch" class="projImg" src="images/etch.png" />
-                </a>
-                <a href="https://keenymcg.github.io/Odin_Calculator/">
-                    <img id="calc" class="projImg" src="images/calculator.png" />
-                </a>
-                <a href="https://keenymcg.github.io/Odin-Rock-Paper-Scissor-JS/">
-                    <img id="game" class="projImg" src="images/rps.png" />
-                </a>
+                <img id="etch" class="projImg" src="images/etch.png" />
+                <img id="calc" class="projImg" src="images/calculator.png" />
+                <img id="game" class="projImg" src="images/rps.png" />
             </div>
         </section>
     </div>
@@ -94,7 +88,7 @@
 <!--CONTACT ME-->
     <section id="contactMe" class="aboutMe">
         <div class="aboutWrapper">
-            <h1 class="aboutHeading poop">Let's connect!</h1>
+            <h1 class="contactHeading poop">Let's connect!</h1>
             <div class="socialsWrapper">
                 <p>Here's my media, say <em>"hi!"</em> anytime:</p><br>
                 <div class="socials">
