Adjust mobile style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header>
             <div class="headerText">
                 <h1 class="woop">Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
-                <p>A self-taught developer studying daily since January 2023 <br>with the following passions:</p>
+                <p class="headerP">A self-taught developer studying daily since January 2023 <br>with the following passions:</p>
                 <h3>
                     <ul class="eggs-list">
                         <li class="passions" data-avatar="images/education.png"><img src="images/egg-1.png" alt="egg image" />Volunteering</li>
@@ -48,7 +48,7 @@
     <div id="projects" class="projectsBg wrapper">
         <section class="projectSect">
             <div class="specialH1Wrapper">
-                <h1 class="specialH1">Learning to code from YouTube videos and dedication to 
+                <h1 class="specialH1 woop">Learning to code from YouTube videos and dedication to 
                     <a href="https://www.theodinproject.com/paths">The Odin Project</a>, 
                     here are my recent projects. </h1>
             </div>
