Links open new window

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section class="projectSect">
             <div class="specialH1Wrapper">
                 <h1 class="specialH1 woop">Learning to code from YouTube videos and dedication to 
-                    <a href="https://www.theodinproject.com/paths">The Odin Project</a>, 
+                    <a href="https://www.theodinproject.com/paths" target="_blank">The Odin Project</a>, 
                     here are my recent projects. </h1>
             </div>
             <div class="row projects">
@@ -92,9 +92,9 @@
             <div class="socialsWrapper">
                 <p>Here's my media, say <em>"hi!"</em> anytime:</p><br>
                 <div class="socials">
-                        <img id="linkedIn" class="socialsImg" src="images/linked.png"/>
-                        <img id="gitHub" class="socialsImg" src="images/github.png"/>
-                        <img id="insta" class="socialsImg" src="images/insta.png"/>
+                        <img id="linkedIn" class="socialsImg" src="images/linked.png" target="_blank"/>
+                        <img id="gitHub" class="socialsImg" src="images/github.png" target="_blank"/>
+                        <img id="insta" class="socialsImg" src="images/insta.png" target="_blank"/>
                 </div>
             </div>
         </div>
