Position "hoverHere" img

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
         <img id="resume" class="menuImg" src="images/resume.png" alt="Resume icon"><br>
         <img id="camera" class="menuImg" src="images/camera.png" alt="Photography icon">
     </div>
+
     <div class="headerBg wrapper">
 
         <header>
             <div class="headerText">
+                <img class="hoverHere2" src="images/hoverHere.png" alt="Hover over the egg-points!"">
                 <h1 class="woop">Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
                 <p class="headerP">A self-taught developer studying daily since January 2023 <br>with the following passions:</p>
                 <h3>
