Add "firstProj" fade-in img

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 <img id="etch" class="projImg" src="images/etch.png" />
                 <img id="calc" class="projImg" src="images/calculator.png" />
                 <img id="game" class="projImg" src="images/rps.png" />
+                <img src="images/firstProj.png" alt="My first Javascript project!" class="firstProj">
             </div>
         </section>
     </div>
