--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                     <a href="https://www.theodinproject.com/paths" target="_blank">The Odin Project</a>, 
                     here are my recent projects. </h1>
             </div>
+            <div class="row projects gitCodeWrapper">
+                <img src="images/github.png" alt="" class="gitCode" id="etchGit">
+                <img src="images/github.png" alt="" class="gitCode" id="calcGit">
+                <img src="images/github.png" alt="" class="gitCode" id="rpsGit">
+            </div>
             <div class="row projects">
                 <img id="etch" class="projImg" src="images/etch.png" />
                 <img id="calc" class="projImg" src="images/calculator.png" />
