Adjust eggs-list size, hover-img, and fix avatar

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
         <header>
             <div class="headerText">
-                <img class="hoverHere2" src="images/hoverHere.png" alt="Hover over the egg-points!"">
+                <img class="hoverHere2" src="images/hoverHere2.png" alt="Hover over the egg-points!"">
                 <h1 class="woop">Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
-                <p class="headerP">A self-taught developer studying daily since January 2023 <br>with the following passions:</p>
+                <p class="headerP">A self-taught developer studying daily since January 2023 <br>
+                    with some of the following passions:</p>
                 <h3>
                     <ul class="eggs-list">
                         <li class="passions" data-avatar="images/education.png"><img src="images/egg-1.png" alt="egg image" />Volunteering</li>
@@ -38,7 +39,8 @@
             </div>
             <div id="avatar">
                 <img class="tempAvatar" src="images/paraglide.jpeg" />
-                <h6 class="avatarText"></h6>
+                <h6 class="avatarText">text</h6>
+                <h6 class="avatarTextRow2 #3F497F">text</h6>
             </div>
 
         </header>        
