Minor tweaks to colors

--- a/index.html
+++ b/index.html
@@ -56,16 +56,25 @@
                     <a href="https://www.theodinproject.com/paths" target="_blank">The Odin Project</a>, 
                     here are my recent projects. </h1>
             </div>
-            <div class="row projects gitCodeWrapper">
-                <img src="images/github.png" alt="" class="gitCode" id="etchGit">
-                <img src="images/github.png" alt="" class="gitCode" id="calcGit">
-                <img src="images/github.png" alt="" class="gitCode" id="rpsGit">
-            </div>
-            <div class="row projects">
-                <img id="etch" class="projImg" src="images/etch.png" />
-                <img id="calc" class="projImg" src="images/calculator.png" />
-                <img id="game" class="projImg" src="images/rps.png" />
-                <img src="images/firstProj.png" alt="My first Javascript project!" class="firstProj">
+            <div class="projectsWrapper">
+                <div class="row projects gitCodeWrapper">
+                    <img src="images/github.png" alt="" class="gitCode" id="etchGit">
+                    <img id="etch" class="projImg" src="images/etch.png" />
+                </div>
+
+                <div class="row projects gitCodeWrapper">
+                    <img src="images/github.png" alt="" class="gitCode" id="calcGit">
+                    <img id="calc" class="projImg" src="images/calculator.png" />
+                </div>
+
+                <div class="row projects gitCodeWrapper">
+                    <img src="images/github.png" alt="" class="gitCode" id="rpsGit">
+                    <img id="game" class="projImg" src="images/rps.png" />
+                </div>
+
+                <div class="row projects">
+                    <img src="images/firstProj.png" alt="My first Javascript project!" class="firstProj">
+                </div>
             </div>
         </section>
     </div>
