--- a/resume.html
+++ b/resume.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/bird_logo.png" type="image/x-icon">
 </head>
-<body>
+<body #resumeBody>
     <div class="homeBtn"><a href="index.html"><img id="homeBtn" src="images/home.png"/></a></div>
-    <div class="resumeContainer"><img id="resume2" src="images/TechResume.png" alt="Keenan's Resume"></div>
+    <div class="resumeContainer">
+        <img id="veryFun" class="veryFun" src="images/veryFun2.png" alt="he has jokes!"/>
+        <img id="resume2" src="images/TechResume.png" alt="Keenan's Resume">
+    </div>
 </body>
 </html>
