--- a/resume.html
+++ b/resume.html
@@ -9,10 +9,12 @@
     <link rel="icon" href="images/bird_logo.png" type="image/x-icon">
 </head>
 <body #resumeBody>
+    <script defer src="resume.js"></script>
+    
     <div class="homeBtn"><a href="index.html"><img id="homeBtn" src="images/home.png"/></a></div>
     <div class="resumeContainer">
-        <img id="veryFun" class="veryFun" src="images/veryFun2.png" alt="he has jokes!"/>
         <img id="resume2" src="images/TechResume.png" alt="Keenan's Resume">
+        <img id="veryFun" class="veryFun" src="images/veryFun2.png" alt="he has jokes!"/>
     </div>
 </body>
 </html>
