Add self-progress goals in proj para

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                 <h1 class="specialH1 woop">Learning to code from YouTube videos and dedication to 
                     <a href="https://www.theodinproject.com/paths" target="_blank">The Odin Project</a>, 
                     here are my recent projects. </h1>
+                    <p class="projsPara">And after I complete TOP's <em>Fullstack Javascript Curriculum,</em> <br>
+                    <strong>I plan to focus intensively backend coding.</strong></p>
             </div>
             <div class="projectsWrapper">
                 <div class="row projects gitCodeWrapper">
