--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="headerText">
                 <img class="hoverHere2" src="images/hoverHere2.png" alt="Hover over the egg-points!"">
                 <h1 class="woop">Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
-                <p class="headerP">A self-taught developer studying daily since January 2023 <br>
+                <p class="headerP">Self-taught developer studying since January 2023 <br>
                     with some of the following passions:</p>
                 <h3>
                     <ul class="eggs-list">
@@ -33,9 +33,8 @@
                         <li class="passions" data-avatar="images/photography.jpg"><img src="images/egg-1.png" alt="egg image" />Photography</li>
                     </ul>
                 </h3>
-                <p>I began dabbling in HTML, CSS, and Python in October 2022, <br> but life got in the way for a bit... <br><br>
-                After a break from November to January I dove back in,<br>
-                and have been loving it ever since.  I have some <strong>big</strong> goals!</p>
+                <p>I'm a <strong>Jr. Developer seeking a entry-level frontend positions</strong>. <br>
+                    Currently learning full-stack JS. Eagerly jumping into backend. <br>Big goals in mind.</p>
             </div>
             <div id="avatar">
                 <img class="tempAvatar" src="images/paraglide.jpeg" />
@@ -55,8 +54,8 @@
                 <h1 class="specialH1 woop">Learning to code from YouTube videos and dedication to 
                     <a href="https://www.theodinproject.com/paths" target="_blank">The Odin Project</a>, 
                     here are my recent projects. </h1>
-                    <p class="projsPara">And after I complete TOP's <em>Fullstack Javascript Curriculum,</em> <br>
-                    <strong>I plan to focus intensively backend coding.</strong></p>
+                    <p class="projsPara">Presently working through TOP's <em>Fullstack Javascript Curriculum,</em> <br>
+                    <strong>while working 10-12 hour days, 6 days a week, at my current Hollywood job.<br></strong> So... I'm serious about coding.</p>
             </div>
             <div class="projectsWrapper">
                 <div class="row projects gitCodeWrapper">
@@ -87,16 +86,16 @@
             <h1 class="aboutHeading">More about me:</h1>
             
             <div class="aboutParaWrap">
-                <p class="aboutMeP">Graduated from UC Santa Barbara in 2017, B.A. in Film and Media.<br><br>
-                    From there, I moved to Ethiopia and taught English to 9th graders and learners of all ages until 2019, 
+                <p class="aboutMeP">Graduate of UC Santa Barbara, 2013-2017, B.A. in Film and Media.<br><br>
+                    2017-2019 living in rural Ethiopia, I taught English to 9th graders and learners of all ages, 
                     while also becoming advanced in the Amharic language. ሰላም ናው, ቴናስቲሊን!
                 </p>
-                <p class="aboutMeP">After that, I moved to LA to pursue a career in film.  
-                    I spent two suit-wearing years in the trenches of a talent agency, 
+                <p class="aboutMeP">2019, I moved to LA for film,  
+                    and spent two suit-wearing years in the trenches of a talent agency, 
                     honing my skills as an expert communicator, multitasker, and client-facer. <br><br>
-                    Early in 2021, I moved back to Santa Barbara to work at Robert Zemeckis’s company, 
+                    2021, I returned to Santa Barbara to work at Robert Zemeckis’s company, 
                     where I’ve been fortunate to work with an amazing team, and meet my favorite celebs. 
-                    <br>(<i>My claim to fame is being Tom Hanks’s favorite barista</i>). </p>
+                    <br> </p>
                 <p class="aboutMeP">In my free time, I devour new skills.  <strong>I learn fast, work hard, dislike capitalism, and find that I mesh with teams quickly.</strong> </h2>
             </div>
         </div>  
