Update resume, mod pics for fast load

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     Currently learning full-stack JS. Eagerly jumping into backend. <br>Big goals in mind.</p>
             </div>
             <div id="avatar">
-                <img class="tempAvatar" src="images/paraglide.jpeg" />
+                <img class="tempAvatar" src="images/keenan_main.jpg" />
                 <h6 class="avatarText">text</h6>
                 <h6 class="avatarTextRow2 #3F497F">text</h6>
             </div>
