Start mobile compatibility

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         </header>        
     </div>
 
-    <img id="arrow" src="images/arrow.png"></img>
+    <div class="arrowDiv">    
+        <img id="arrow" src="images/arrow.png"></img>
+    </div>
 
 <!--MY PROJECTS-->
     <div id="projects" class="projectsBg wrapper">
