--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     2021, I returned to Santa Barbara to work at Robert Zemeckis’s company, 
                     where I’ve been fortunate to work with an amazing team, and meet my favorite celebs. 
                     <br> </p>
-                <p class="aboutMeP">In my free time, I devour new skills.  <strong>I learn fast, work hard, dislike capitalism, and find I mesh with teams quickly.</strong> </h2>
+                <p class="aboutMeP">In my free time, I devour new skills.  <strong>I learn fast, work hard, and find I mesh with teams quickly.</strong> </h2>
             </div>
         </div>  
     </section>
