Fix spelling error

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li class="passions" data-avatar="images/photography.jpg"><img src="images/egg-1.png" alt="egg image" />Photography</li>
                     </ul>
                 </h3>
-                <p>I'm a <strong>Jr. Developer seeking a entry-level frontend positions</strong>. <br>
+                <p>I'm a <strong>Jr. Developer seeking entry-level frontend positions</strong>. <br>
                     Currently learning full-stack JS. Eagerly jumping into backend. <br>Big goals in mind.</p>
             </div>
             <div id="avatar">
