Add Dashboard to projects

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
             </div>
             <div class="projectsWrapper">
                 <div class="row projects gitCodeWrapper">
+                    <img src="images/github.png" alt="" class="gitCode" id="dashGit">
+                    <img id="dash" class="projImg" src="images/interface.png" />
+                </div>
+                
+                <div class="row projects gitCodeWrapper">
                     <img src="images/github.png" alt="" class="gitCode" id="etchGit">
                     <img id="etch" class="projImg" src="images/etch.png" />
                 </div>
@@ -89,14 +94,14 @@
             
             <div class="aboutParaWrap">
                 <p class="aboutMeP">Graduate of UC Santa Barbara, 2013-2017, B.A. in Film and Media.<br><br>
-                    2017-2019 living in rural Ethiopia, I taught English to 9th graders and learners of all ages, 
-                    while also becoming advanced in the Amharic language. ሰላም ናው, ቴናስቲሊን!
+                    2017-2019 I lived in rural Ethiopia, teaching English to 9th graders and learners of all ages, 
+                    while also becoming an advanced Amharic speaker. ሰላም ናው, ቴናስቲሊን!
                 </p>
                 <p class="aboutMeP">2019, I moved to LA for film,  
-                    and spent two suit-wearing years in the trenches of a talent agency, 
-                    honing my skills as an expert communicator, multitasker, and client-facer. <br><br>
+                    working at a top-tier talent agency, 
+                    and honing my skills as an expert communicator, multitasker, and assistant. <br><br>
                     2021, I returned to Santa Barbara to work at Robert Zemeckis’s company, 
-                    where I’ve been fortunate to work with an amazing team, and meet my favorite celebs. 
+                    where I’ve been fortunate to work with an amazing team of worldclass filmmakers. 
                     <br> </p>
                 <p class="aboutMeP">In my free time, I devour new skills.  <strong>I learn fast, work hard, and find I mesh with teams quickly.</strong> </h2>
             </div>
