Edit Projects header description

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <div id="projects" class="projectsBg wrapper">
         <section class="projectSect">
             <div class="specialH1Wrapper">
-                <h1 class="specialH1 woop">Learning to code from YouTube videos and dedication to 
+                <h1 class="specialH1 woop">Learning to code from TeamTreehouse, YouTube videos, and dedication to 
                     <a href="https://www.theodinproject.com/paths" target="_blank">The Odin Project</a>, 
                     here are my recent projects. </h1>
-                    <p class="projsPara">Presently working through TOP's <em>Fullstack Javascript Curriculum,</em> <br>
-                    <strong>while working 10-12 hour days, 6 days a week, at my current Hollywood job.<br></strong> So... I'm serious about coding.</p>
+                    <p class="projsPara">Presently working through TOP's <em>Fullstack Ruby on Rails Curriculum,</em> <br>
+                    while also being a full-time student for Massage Therapy and Rehabilitation.</p>
             </div>
             <div class="projectsWrapper">
                 <div class="row projects gitCodeWrapper">
