--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="headerText">
                 <img class="hoverHere2" src="images/hoverHere2.png" alt="Hover over the egg-points!"">
                 <h1 class="woop">Hi there! I'm Keenan. <img id="bird" src="images/bird_logo.png"></h1>
-                <p class="headerP">Self-taught developer studying since January 2023 <br>
+                <p class="headerP">Self-taught developer
                     with some of the following passions:</p>
                 <h3>
                     <ul class="eggs-list">
@@ -34,7 +34,7 @@
                     </ul>
                 </h3>
                 <p>I'm a <strong>Jr. Developer seeking entry-level frontend positions</strong>. <br>
-                    Currently learning full-stack JS. Eagerly jumping into backend. <br>Big goals in mind.</p>
+                    Currently learning & exploring full-stack Ruby on Rails.
             </div>
             <div id="avatar">
                 <img class="tempAvatar" src="images/keenan_main.jpg" />
