Restore missing closing Div tag Masthead

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                         <img class="css" src="images/css.png">
                     </span>
                 </div>
+            </div>
             <div class="arrowDiv">    
                 <img id="arrow" src="images/arrow.png"></img>
             </div>
