Adjust text & arrows

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <span>Hi there!</span>
                         <span>I'm Keenan. <img id="bird" src="images/bird_logo.png"></span>
                     </h1>
-                    <p class="headerP"><strong class="strong">Self-taught Jr. Developer</strong> with some of the following passions:</p>
+                    <p class="headerP"><strong class="strong">Self-taught Jr. Developer</strong> with the following passions:</p>
                     <h3>
                         <ul class="eggs-list">
                             <li class="passions" data-avatar="images/education.png"><img src="images/spiral.png" alt="egg image" />Volunteering</li>
@@ -37,7 +37,7 @@
                             <li class="passions" data-avatar="images/photography.jpg"><img src="images/spiral.png" alt="egg image" />Photography</li>
                         </ul>
                     </h3>
-                    <p class="headerP"><strong class="strong">Seeking entry-level frontend and full-stack positions</strong>. <br>
+                    <p class="headerP"><strong class="strong">Seeking entry-level frontend and full-stack positions</strong>.
                         Currently learning & exploring full-stack Ruby on Rails.</p>
                 </div>
                 <div id="avatar" class="avatar">
@@ -59,15 +59,14 @@
             </div>   
         </header>
 
-    <!--MY PROJECTS-->
+        <!--MY PROJECTS-->
         <div id="projects" class="projectsBg wrapper">
             <section class="projectSect">
                 <div class="specialH1Wrapper">
                     <h1 class="specialH1">Learning to code from TeamTreehouse, YouTube, and dedication to 
                         <a href="https://www.theodinproject.com/paths" target="_blank">The Odin Project</a>, 
                         here are my recent projects. </h1>
-                    <p class="projsPara">Presently working through TOP's <em>Fullstack Ruby on Rails Curriculum,</em>
-                        while also being a full-time student for Massage Therapy and Rehabilitation.</p>
+                    <p class="projsPara">Presently working through TOP's <em>Fullstack Ruby on Rails curriculum.</em></p>
                 </div>
                 <div class="projectsWrapper">
                     <div class="projects">
@@ -92,10 +91,12 @@
 
                     <!-- <img src="images/firstProj.png" alt="My first Javascript project!" class="firstProj"> -->
                 </div>
+
+            <div class="arrowDiv">    
+                <img id="arrow" src="images/arrow.png"></img>
+            </div>
             </section>
         </div>
-
-        <img id="arrow2" class="lastArrow" src="images/arrow.png"></img>
 
     <!--ABOUT ME-->
         <section id="aboutMe" class="aboutMe">
@@ -116,11 +117,11 @@
                     <p class="aboutMeP">In my free time, I devour new skills.  <strong>I learn fast, work hard, and find I mesh with teams quickly.</strong> </h2>
                 </div>
             </div>  
-        </section>
 
-        <div class="arrowDiv">    
-            <img id="arrow" src="images/arrow.png"></img>
-        </div>
+            <div class="arrowDiv">    
+                <img id="arrow" src="images/arrow.png"></img>
+            </div>
+        </section>
 
     <!--CONTACT ME-->
         <section id="contactMe" class="aboutMe">
