--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="arrowDiv">    
-                <img id="arrow" src="images/arrow.png"></img>
+                <img id="arrow1" src="images/arrow.png"></img>
             </div>
             </div>   
         </header>
@@ -110,15 +110,15 @@
                     </p>
                     <p class="aboutMeP">2019, I moved to LA for film,  
                         working at a top-tier talent agency, 
-                        and honing my skills as an expert communicator, multitasker, and assistant. <br><br>
+                        and honing my skills as an expert communicator, multi-tasker, and assistant. <br><br>
                         2021, I returned to Santa Barbara to work at Robert Zemeckis’s company, 
-                        where I’ve been fortunate to work with an amazing team of worldclass filmmakers. 
+                        where I’ve been fortunate to work with an amazing team of world-class filmmakers. 
                         <br> </p>
                     <p class="aboutMeP">In my free time, I devour new skills.  <strong>I learn fast, work hard, and find I mesh with teams quickly.</strong> </h2>
                 </div>
             </div>  
 
-            <div class="arrowDiv">    
+            <div class="arrowDiv mast-arrow">    
                 <img id="arrow" src="images/arrow.png"></img>
             </div>
         </section>
